--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel security-check open:src lint:watch test:watch",
+    "start": "npm-run-all --parallel security-check open:src lint:watch test:watch generate-mock-data start-mockapi",
     "open:src": "babel-node buildScripts/srcServer.js",
     "lint": "esw webpack.config.* src buildScripts --color",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test --watch",
-    "security-check": "nsp check"
+    "security-check": "nsp check",
+    "generate-mock-data": "babel-node buildScripts/generateMockData",
+    "start-mockapi": "json-server --watch src/api/db.json --port 8081",
+    "prestart-mockapi": "babel-node buildScripts/startMockAPIMessage.js"
   },
   "author": "Sam Ruby",
   "license": "MIT",
