--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "security-check": "nsp check",
     "generate-mock-data": "babel-node buildScripts/generateMockData",
     "start-mockapi": "json-server --watch src/api/db.json --port 8081",
-    "prestart-mockapi": "babel-node buildScripts/startMockAPIMessage.js"
+    "prestart-mockapi": "babel-node buildScripts/startMockAPIMessage.js",
+    "clean-dist": "rimraf ./dist && mkdir dist",
+    "prebuild": "npm-run-all clean-dist test lint prestart",
+    "build": "babel-node buildScripts/build.js",
+    "postbuild": "babel-node buildScripts/distServer.js"
   },
   "author": "Sam Ruby",
   "license": "MIT",
