finished moving everything from day 1 over, still need to figure out how to load the sounds files

--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel security-check open:src lint:watch test:watch generate-mock-data start-mockapi",
+    "start": "npm-run-all --parallel security-check open:src lint:watch test:watch",
     "open:src": "babel-node buildScripts/srcServer.js",
     "lint": "esw webpack.config.* src buildScripts --color",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test --watch",
     "security-check": "nsp check",
-    "generate-mock-data": "babel-node buildScripts/mockApi/generateMockData",
-    "start-mockapi": "json-server --watch src/api/db.json --port 8081",
-    "prestart-mockapi": "babel-node buildScripts/mockApi/startMockAPIMessage.js",
     "clean-dist": "rimraf ./dist && mkdir dist",
     "prebuild": "npm-run-all clean-dist test lint prestart",
     "build": "babel-node buildScripts/build.js",
@@ -43,6 +40,7 @@
     "eslint-watch": "2.1.14",
     "express": "4.14.0",
     "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "2.22.0",
     "jsdom": "9.8.0",
     "json-schema-faker": "0.3.6",
@@ -57,6 +55,7 @@
     "rimraf": "2.5.4",
     "style-loader": "0.13.1",
     "surge": "^0.19.0",
+    "url-loader": "^0.6.2",
     "webpack": "1.13.2",
     "webpack-dev-middleware": "1.8.4",
     "webpack-hot-middleware": "2.13.0",
