--- a/package.json
+++ b/package.json
@@ -33,14 +33,17 @@
     "chalk": "1.1.3",
     "cheerio": "0.22.0",
     "compression": "1.6.2",
+    "copy-webpack-plugin": "^4.2.3",
     "cross-env": "3.1.3",
     "css-loader": "0.25.0",
     "eslint": "3.8.1",
     "eslint-plugin-import": "2.0.1",
     "eslint-watch": "2.1.14",
     "express": "4.14.0",
+    "extract-loader": "^1.0.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "^1.1.5",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "2.22.0",
     "jsdom": "9.8.0",
     "json-schema-faker": "0.3.6",
